Fix overflow and modal hide

--- a/app/src/components/modals/ModalInfosArticle.css
+++ b/app/src/components/modals/ModalInfosArticle.css
@@ -1,3 +1,4 @@
 .modal-infos-description {
     text-align: justify;
+    overflow: hidden;
 }
